# gnss-localization

./: README.md  cli.py  data.csv  example.py  pyproject.toml
gnss_localization/: __init__.py  cli.py  coordinates_estimator.py  heading_estimator.py  projection_estimator.py  projection_matrix.py  visualizations.py
tests/: test_proj_matrix.py
