[tool.poetry]
name = "gnss-localization"
version = "0.1.0"
description = "Package for rigid body localoztion using GNSS data"
authors = ["rahowa <roninfromsvf@gmail.com>"]
license = "Creative Commons Legal Code"
readme = "README.md"
packages = [{include = "gnss_localization"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.3.0"
pylint = "^2.17.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
